Refactor audio package structure and update references
Moved audio-related classes into subpackages: base, midi, sound, and streaming. Updated all imports, usages, and documentation to reflect new package paths. Improved visibility and API consistency for MIDI player classes. This refactor clarifies the organization of audio components and improves maintainability.